compiler/testData/diagnostics/testsWithStdLib/native/reified.fir.kt
import kotlin.jvm.*

external fun <<!REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T> foo()
inline external fun <reified T> bar()
